force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/ACCOUNT_NAME__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_NAME__c</fullName>
    <label>ACCOUNT_NAME</label>
    <length>128</length>
    <type>Text</type>
</CustomField>