force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/AFFILIATE_LANGUAGE__c.field-meta.xml
<CustomField>
    <fullName>AFFILIATE_LANGUAGE__c</fullName>
    <label>AFFILIATE_LANGUAGE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>