force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/AGREEMENT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>AGREEMENT_TYPE__c</fullName>
    <label>AGREEMENT_TYPE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>