force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/APPROVALS_REQUIRED_Y_N__c.field-meta.xml
<CustomField>
    <fullName>APPROVALS_REQUIRED_Y_N__c</fullName>
    <label>APPROVALS_REQUIRED_Y_N</label>
    <length>128</length>
    <type>Text</type>
</CustomField>