force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/APPROVED_BY__c.field-meta.xml
<CustomField>
    <fullName>APPROVED_BY__c</fullName>
    <label>APPROVED_BY</label>
    <length>128</length>
    <type>Text</type>
</CustomField>