force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/BUSINESS_UNIT__c.field-meta.xml
<CustomField>
    <fullName>BUSINESS_UNIT__c</fullName>
    <label>BUSINESS_UNIT</label>
    <length>128</length>
    <type>Text</type>
</CustomField>