force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/COMMENTS__c.field-meta.xml
<CustomField>
    <fullName>COMMENTS__c</fullName>
    <label>COMMENTS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>