force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/COMPANY_SIGNED_BY__c.field-meta.xml
<CustomField>
    <fullName>COMPANY_SIGNED_BY__c</fullName>
    <label>COMPANY_SIGNED_BY</label>
    <length>128</length>
    <type>Text</type>
</CustomField>