force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/CONTRACT_CATEGORY_2__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_CATEGORY_2__c</fullName>
    <label>CONTRACT_CATEGORY_2</label>
    <length>128</length>
    <type>Text</type>
</CustomField>