force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/CONTRACT_CURRENCY__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_CURRENCY__c</fullName>
    <label>CONTRACT_CURRENCY</label>
    <length>128</length>
    <type>Text</type>
</CustomField>