force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/CONTRACT_END_DATE__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_END_DATE__c</fullName>
    <label>CONTRACT_END_DATE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>