force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/CONTRACT_GROUP__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_GROUP__c</fullName>
    <label>CONTRACT_GROUP</label>
    <length>128</length>
    <type>Text</type>
</CustomField>