force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/CONTRACT_OWNER__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_OWNER__c</fullName>
    <label>CONTRACT_OWNER</label>
    <length>128</length>
    <type>Text</type>
</CustomField>