force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/CONTRACT_PURPOSE__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_PURPOSE__c</fullName>
    <label>CONTRACT_PURPOSE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>