force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/CONTRACT_TERM_MONTHS__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_TERM_MONTHS__c</fullName>
    <label>CONTRACT_TERM_MONTHS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>