force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/CONTRACT_TITLE__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_TITLE__c</fullName>
    <label>CONTRACT_TITLE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>