force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/CONTRACT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_TYPE__c</fullName>
    <label>CONTRACT_TYPE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>