force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/CONTRACT_VALUE__c.field-meta.xml
<CustomField>
    <fullName>CONTRACT_VALUE__c</fullName>
    <label>CONTRACT_VALUE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>