force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/CPQ_OUTPUT_TEMPLATE_NAME__c.field-meta.xml
<CustomField>
    <fullName>CPQ_OUTPUT_TEMPLATE_NAME__c</fullName>
    <label>CPQ_OUTPUT_TEMPLATE_NAME</label>
    <length>128</length>
    <type>Text</type>
</CustomField>