force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/CURRENT_ATTORNEY__c.field-meta.xml
<CustomField>
    <fullName>CURRENT_ATTORNEY__c</fullName>
    <label>CURRENT_ATTORNEY</label>
    <length>128</length>
    <type>Text</type>
</CustomField>