force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/CURRENT_CONTRACT_ADMINISTRATOR__c.field-meta.xml
<CustomField>
    <fullName>CURRENT_CONTRACT_ADMINISTRATOR__c</fullName>
    <label>CURRENT_CONTRACT_ADMINISTRATOR</label>
    <length>128</length>
    <type>Text</type>
</CustomField>