force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/DOCUMENT_ID__c.field-meta.xml
<CustomField>
    <fullName>DOCUMENT_ID__c</fullName>
    <label>DOCUMENT_ID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>