force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/EXTERNAL_CONTRACT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>EXTERNAL_CONTRACT_NUMBER__c</fullName>
    <label>EXTERNAL_CONTRACT_NUMBER</label>
    <length>128</length>
    <type>Text</type>
</CustomField>