force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/LEGAL_ENTITY_NAME__c.field-meta.xml
<CustomField>
    <fullName>LEGAL_ENTITY_NAME__c</fullName>
    <label>LEGAL_ENTITY_NAME</label>
    <length>128</length>
    <type>Text</type>
</CustomField>