force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/NON_STANDARD_ACCOUNTING_Y_N__c.field-meta.xml
<CustomField>
    <fullName>NON_STANDARD_ACCOUNTING_Y_N__c</fullName>
    <label>NON_STANDARD_ACCOUNTING_Y_N</label>
    <length>128</length>
    <type>Text</type>
</CustomField>