force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/NOTICE_PERIOD_IN_DAYS__c.field-meta.xml
<CustomField>
    <fullName>NOTICE_PERIOD_IN_DAYS__c</fullName>
    <label>NOTICE_PERIOD_IN_DAYS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>