force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/OBJECT__c.field-meta.xml
<CustomField>
    <fullName>OBJECT__c</fullName>
    <label>OBJECT</label>
    <length>128</length>
    <type>Text</type>
</CustomField>