force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/ORIGINAL_ATTORNEY__c.field-meta.xml
<CustomField>
    <fullName>ORIGINAL_ATTORNEY__c</fullName>
    <label>ORIGINAL_ATTORNEY</label>
    <length>128</length>
    <type>Text</type>
</CustomField>