force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/PARENT_CONTRACT__c.field-meta.xml
<CustomField>
    <fullName>PARENT_CONTRACT__c</fullName>
    <label>PARENT_CONTRACT</label>
    <length>128</length>
    <type>Text</type>
</CustomField>