force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/RECORD_TYPE__c.field-meta.xml
<CustomField>
    <fullName>RECORD_TYPE__c</fullName>
    <label>RECORD_TYPE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>