force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/RENEWAL_TERM_LENGTH_IN_MONTHS__c.field-meta.xml
<CustomField>
    <fullName>RENEWAL_TERM_LENGTH_IN_MONTHS__c</fullName>
    <label>RENEWAL_TERM_LENGTH_IN_MONTHS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>