force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/STATUS__c.field-meta.xml
<CustomField>
    <fullName>STATUS__c</fullName>
    <label>STATUS</label>
    <length>128</length>
    <type>Text</type>
</CustomField>