force-app/main/default/objects/VCG_CPQ_Contract_Template__c/fields/TERM_TYPE__c.field-meta.xml
<CustomField>
    <fullName>TERM_TYPE__c</fullName>
    <label>TERM_TYPE</label>
    <length>128</length>
    <type>Text</type>
</CustomField>